math-core/src/snapshots/math_core__tests__texttt.snap
---
source: math-core/src/lib.rs
expression: "\\texttt{x}"
---
<math>
    <mtext>𝚡</mtext>
</math>
