math-core/src/snapshots/math_core__tests__transform_group.snap
---
source: math-core/src/lib.rs
expression: "\\mathit{a{bc}d}"
---
<math>
    <mrow>
        <mi>𝑎</mi>
        <mi>𝑏𝑐</mi>
        <mi>𝑑</mi>
    </mrow>
</math>
