math-core/src/snapshots/math_core__tests__triple_prime.snap
---
source: math-core/src/lib.rs
expression: "f'''"
---
<math>
    <msup>
        <mi>f</mi>
        <mo>‴</mo>
    </msup>
</math>
