math-core/src/snapshots/math_core__tests__unclosed_bracket.snap
---
source: math-core/src/lib.rs
expression: "\\sqrt[lim"
---
Position: 9
UnclosedGroup(
    SquareBracketClose,
)
