math-core/src/snapshots/math_core__tests__unclosed_env.snap
---
source: math-core/src/lib.rs
expression: "\\begin{matrix} x"
---
Position: 16
UnclosedGroup(
    End(
        Matrix,
    ),
)
