math-core/src/snapshots/math_core__tests__unclosed_left.snap
---
source: math-core/src/lib.rs
expression: "\\left( x"
---
Position: 8
UnclosedGroup(
    Right,
)
