math-core/src/snapshots/math_core__tests__unclosed_text.snap
---
source: math-core/src/lib.rs
expression: "\\text{hello"
---
Position: 11
UnclosedGroup(
    GroupEnd,
)
