math-core/src/snapshots/math_core__tests__underbrace.snap
---
source: math-core/src/lib.rs
expression: "\\underbrace{a+b+c}_{d}"
---
<math>
    <munder>
        <munder>
            <mrow>
                <mi>a</mi>
                <mo>+</mo>
                <mi>b</mi>
                <mo>+</mo>
                <mi>c</mi>
            </mrow>
            <mo>⏟</mo>
        </munder>
        <mi>d</mi>
    </munder>
</math>
