math-core/src/snapshots/math_core__tests__underscore.snap
---
source: math-core/src/lib.rs
expression: "x\\ y"
---
<math>
    <mi>x</mi>
    <mtext> </mtext>
    <mi>y</mi>
</math>
