math-core/src/snapshots/math_core__tests__unexpected_limits.snap
---
source: math-core/src/lib.rs
expression: "\\text{hello}\\limits_0^1"
---
Position: 12
CannotBeUsedHere {
    got: Limits,
    correct_place: AfterBigOp,
}
