math-core/src/snapshots/math_core__tests__unsupported_command.snap
---
source: math-core/src/lib.rs
expression: "\\asdf"
---
Position: 0
UnknownCommand(
    "asdf",
)
