math-core/src/snapshots/math_core__tests__unsupported_environment.snap
---
source: math-core/src/lib.rs
expression: "\\begin{xmatrix} 1 \\end{xmatrix}"
---
Position: 0
UnknownEnvironment(
    "xmatrix",
)
